# Space-Point

./: .env  .env.deploy.example  .gitignore  README.md  index.html  package-lock.json  package.json  релиз_на_сервер.md
scripts/: deploy-server.sh
server/: .env  .env.example  README.md  package-lock.json  package.json
server/db/: schema.sql
server/scripts/: seed.js  setup-db.sh
server/src/: db.js  index.js  storage.js
server/src/middleware/: auth.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.js
src/components/: AccountModal.jsx  Backdrop.jsx  ChatPanel.jsx  ConversationList.jsx  NavigationRail.jsx  UserModal.jsx
src/data/: mockData.js
src/hooks/: useIsMobileViewport.js
src/mobile/: IOSChatPanel.jsx  IOSHome.jsx
src/styles/: ios-chat.css  mobile-ios.css
src/utils/: notifications.js
