[package]
name = "space-point"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "space_point_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6"
objc2-core-foundation = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSNotification", "NSString", "NSObjCRuntime", "NSDictionary", "NSValue", "NSObject"] }
objc2-ui-kit = { version = "0.3.2", features = ["UIScrollView", "UIGeometry", "objc2-core-foundation"] }
